Paketeak atala kasi bukatuta, update kontsulta egitean ez da hauskorraren baloera aktualizatzen